--- a/DAOLayer/DAOLayer.csproj
+++ b/DAOLayer/DAOLayer.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TapTinDAO.cs" />
+    <Compile Include="ChuDeDAO.cs" />
     <Compile Include="DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
