--- a/LCTMoodle/Web.config
+++ b/LCTMoodle/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="chuoiKetNoi_LCTMoodle" connectionString="Server=123.30.187.4; User ID=rtcmfraf_Moodle; Password=Mo0@g.c" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
