--- a/DAOLayer/DAOLayer.csproj
+++ b/DAOLayer/DAOLayer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NguoiDungDAO.cs" />
     <Compile Include="TapTinDAO.cs" />
     <Compile Include="ChuDeDAO.cs" />
     <Compile Include="DAO.cs" />
