--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -39,11 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataDTO\NguoiDungDataDTO.cs" />
     <Compile Include="DataDTO\TapTinDataDTO.cs" />
     <Compile Include="DataDTO\ChuDeDataDTO.cs" />
     <Compile Include="DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewDTO\ChuDeViewDTO.cs" />
+    <Compile Include="ViewDTO\NguoiDungViewDTO.cs" />
     <Compile Include="ViewDTO\TapTinViewDTO.cs" />
   </ItemGroup>
   <ItemGroup />
