--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -108,6 +108,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Plugin\ckeditor\adapters\" />
+    <Folder Include="Plugin\ckeditor\samples\assets\inlineall\" />
+    <Folder Include="Plugin\ckeditor\samples\assets\outputxhtml\" />
+    <Folder Include="Plugin\ckeditor\samples\assets\uilanguages\" />
+    <Folder Include="Plugin\ckeditor\samples\plugins\dialog\assets\" />
+    <Folder Include="Plugin\ckeditor\samples\plugins\enterkey\" />
+    <Folder Include="Plugin\ckeditor\samples\plugins\htmlwriter\assets\outputforflash\" />
+    <Folder Include="Plugin\ckeditor\samples\plugins\magicline\" />
+    <Folder Include="Plugin\ckeditor\samples\plugins\toolbar\" />
+    <Folder Include="Plugin\ckeditor\samples\plugins\wysiwygarea\" />
     <Folder Include="Uploads\AnhDaiDien_ChuDe\" />
     <Folder Include="Views\TapTin\" />
   </ItemGroup>
@@ -129,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\ChucNang.sql" />
+    <Content Include="App_Data\KhoaHoc.sql" />
     <Content Include="App_Data\NguoiDung.sql" />
     <Content Include="App_Data\TapTin.sql" />
     <Content Include="App_Data\ChuDe.sql" />
@@ -340,6 +351,163 @@
     <Content Include="Content\styles\LCT\stroke-icons.css" />
     <Content Include="Content\styles\NguoiDung\Index.css" />
     <Content Include="Global.asax" />
+    <Content Include="Plugin\ckeditor\build-config.js" />
+    <Content Include="Plugin\ckeditor\ckeditor.js" />
+    <Content Include="Plugin\ckeditor\config.js" />
+    <Content Include="Plugin\ckeditor\contents.css" />
+    <Content Include="Plugin\ckeditor\lang\en.js" />
+    <Content Include="Plugin\ckeditor\lang\vi.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\a11yhelp.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\af.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ar.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\bg.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ca.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\cs.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\cy.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\da.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\de.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\el.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\en-gb.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\en.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\eo.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\es.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\et.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\fa.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\fi.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\fr-ca.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\fr.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\gl.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\gu.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\he.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\hi.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\hr.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\hu.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\id.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\it.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ja.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\km.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ko.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ku.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\lt.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\lv.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\mk.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\mn.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\nb.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\nl.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\no.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\pl.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\pt-br.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\pt.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ro.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ru.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\si.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\sk.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\sl.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\sq.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\sr-latn.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\sr.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\sv.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\th.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\tr.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\tt.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\ug.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\uk.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\vi.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\zh-cn.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\zh.js" />
+    <Content Include="Plugin\ckeditor\plugins\a11yhelp\dialogs\lang\_translationstatus.txt" />
+    <Content Include="Plugin\ckeditor\plugins\about\dialogs\about.js" />
+    <Content Include="Plugin\ckeditor\plugins\about\dialogs\hidpi\logo_ckeditor.png" />
+    <Content Include="Plugin\ckeditor\plugins\about\dialogs\logo_ckeditor.png" />
+    <Content Include="Plugin\ckeditor\plugins\clipboard\dialogs\paste.js" />
+    <Content Include="Plugin\ckeditor\plugins\dialog\dialogDefinition.js" />
+    <Content Include="Plugin\ckeditor\plugins\icons.png" />
+    <Content Include="Plugin\ckeditor\plugins\icons_hidpi.png" />
+    <Content Include="Plugin\ckeditor\plugins\image\dialogs\image.js" />
+    <Content Include="Plugin\ckeditor\plugins\image\images\noimage.png" />
+    <Content Include="Plugin\ckeditor\plugins\link\dialogs\anchor.js" />
+    <Content Include="Plugin\ckeditor\plugins\link\dialogs\link.js" />
+    <Content Include="Plugin\ckeditor\plugins\link\images\anchor.png" />
+    <Content Include="Plugin\ckeditor\plugins\link\images\hidpi\anchor.png" />
+    <Content Include="Plugin\ckeditor\plugins\magicline\images\hidpi\icon-rtl.png" />
+    <Content Include="Plugin\ckeditor\plugins\magicline\images\hidpi\icon.png" />
+    <Content Include="Plugin\ckeditor\plugins\magicline\images\icon-rtl.png" />
+    <Content Include="Plugin\ckeditor\plugins\magicline\images\icon.png" />
+    <Content Include="Plugin\ckeditor\plugins\pastefromword\filter\default.js" />
+    <Content Include="Plugin\ckeditor\plugins\scayt\dialogs\options.js" />
+    <Content Include="Plugin\ckeditor\plugins\scayt\dialogs\toolbar.css" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\af.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\ar.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\bg.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\ca.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\cs.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\cy.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\da.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\de.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\el.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\en-gb.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\en.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\eo.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\es.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\et.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\fa.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\fi.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\fr-ca.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\fr.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\gl.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\he.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\hr.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\hu.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\id.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\it.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\ja.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\km.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\ku.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\lt.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\lv.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\nb.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\nl.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\no.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\pl.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\pt-br.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\pt.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\ru.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\si.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\sk.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\sl.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\sq.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\sv.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\th.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\tr.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\tt.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\ug.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\uk.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\vi.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\zh-cn.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\zh.js" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\lang\_translationstatus.txt" />
+    <Content Include="Plugin\ckeditor\plugins\specialchar\dialogs\specialchar.js" />
+    <Content Include="Plugin\ckeditor\plugins\tabletools\dialogs\tableCell.js" />
+    <Content Include="Plugin\ckeditor\plugins\table\dialogs\table.js" />
+    <Content Include="Plugin\ckeditor\plugins\wsc\dialogs\ciframe.html" />
+    <Content Include="Plugin\ckeditor\plugins\wsc\dialogs\tmpFrameset.html" />
+    <Content Include="Plugin\ckeditor\plugins\wsc\dialogs\wsc.css" />
+    <Content Include="Plugin\ckeditor\plugins\wsc\dialogs\wsc.js" />
+    <Content Include="Plugin\ckeditor\plugins\wsc\dialogs\wsc_ie.js" />
+    <Content Include="Plugin\ckeditor\skins\office2013\dialog.css" />
+    <Content Include="Plugin\ckeditor\skins\office2013\editor.css" />
+    <Content Include="Plugin\ckeditor\skins\office2013\icons.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\icons_hidpi.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\arrow.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\close.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\hidpi\close.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\hidpi\lock-open.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\hidpi\lock.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\hidpi\refresh.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\lock-open.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\lock.png" />
+    <Content Include="Plugin\ckeditor\skins\office2013\images\refresh.png" />
+    <Content Include="Plugin\ckeditor\styles.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -368,10 +536,17 @@
     <Content Include="Content\fonts\Freeway.TTF" />
     <Content Include="Content\fonts\Akashi.ttf" />
     <Content Include="Content\fonts\TamLe.ttf" />
+    <Content Include="Plugin\ckeditor\CHANGES.md" />
+    <Content Include="Plugin\ckeditor\LICENSE.md" />
+    <Content Include="Plugin\ckeditor\plugins\scayt\LICENSE.md" />
+    <Content Include="Plugin\ckeditor\plugins\scayt\README.md" />
+    <Content Include="Plugin\ckeditor\plugins\wsc\LICENSE.md" />
+    <Content Include="Plugin\ckeditor\plugins\wsc\README.md" />
+    <Content Include="Plugin\ckeditor\README.md" />
     <None Include="Project_Readme.html" />
     <Content Include="Views\LCT\Khung.cshtml" />
     <Content Include="Views\TrangChu\Index.cshtml" />
-    <Content Include="Views\KhoaHoc\TaoKhoaHoc.cshtml" />
+    <Content Include="Views\KhoaHoc\Tao.cshtml" />
     <Content Include="Views\TrangChu\FormMau.cshtml" />
     <Content Include="Views\NguoiDung\DangNhap.cshtml" />
     <Content Include="Views\NguoiDung\DangKy.cshtml" />
