--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -39,12 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataDTO\BaiVietDienDanDataDTO.cs" />
     <Compile Include="DataDTO\KhoaHocDataDTO.cs" />
     <Compile Include="DataDTO\NguoiDungDataDTO.cs" />
     <Compile Include="DataDTO\TapTinDataDTO.cs" />
     <Compile Include="DataDTO\ChuDeDataDTO.cs" />
     <Compile Include="DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewDTO\BaiVietDienDanViewDTO.cs" />
     <Compile Include="ViewDTO\ChuDeViewDTO.cs" />
     <Compile Include="ViewDTO\KhoaHocViewDTO.cs" />
     <Compile Include="ViewDTO\NguoiDungViewDTO.cs" />
