--- a/BUSLayer/BUSLayer.csproj
+++ b/BUSLayer/BUSLayer.csproj
@@ -38,7 +38,9 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaiVietDienDanBUS.cs" />
     <Compile Include="BUS.cs" />
+    <Compile Include="KhoaHocBUS.cs" />
     <Compile Include="NguoiDungBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
