--- a/LCTMoodle/Web.config
+++ b/LCTMoodle/Web.config
@@ -14,6 +14,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <caching>
+        <outputCache enableOutputCache="false" />
+    </caching>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
