--- a/BUSLayer/BUSLayer.csproj
+++ b/BUSLayer/BUSLayer.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaiVietDienDanBUS.cs" />
+    <Compile Include="BinhLuanBUS.cs" />
     <Compile Include="BUS.cs" />
     <Compile Include="KhoaHocBUS.cs" />
     <Compile Include="NguoiDungBUS.cs" />
