--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataDTO\BaiVietDienDanDataDTO.cs" />
+    <Compile Include="DataDTO\BinhLuanDataDTO.cs" />
     <Compile Include="DataDTO\KhoaHocDataDTO.cs" />
     <Compile Include="DataDTO\NguoiDungDataDTO.cs" />
     <Compile Include="DataDTO\TapTinDataDTO.cs" />
@@ -47,6 +48,7 @@
     <Compile Include="DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewDTO\BaiVietDienDanViewDTO.cs" />
+    <Compile Include="ViewDTO\BinhLuanViewDTO.cs" />
     <Compile Include="ViewDTO\ChuDeViewDTO.cs" />
     <Compile Include="ViewDTO\KhoaHocViewDTO.cs" />
     <Compile Include="ViewDTO\NguoiDungViewDTO.cs" />
